--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "author": "Roman Batiuk <roman.batiuk@cyberchisel.com>",
   "license": "MIT",
   "scripts": {
+    "client-install": "yarn --cwd client install",
     "start": "node server/server.js",
-    "server": "nodemon server/server.js "
+    "server": "nodemon server/server.js",
+    "client": "yarn --cwd client start",
+    "dev": "concurrently \"yarn run server\" \"yarn run client\""
+
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
